# Resol-routine

./: .gitattributes  .gitignore  AGENTS.md  README.md  pubspec.yaml
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260301_0001_initial_schema.py  20260301_0002_auth_family_constraints.py  20260302_0003_report_aggregation.py  20260302_0004_content_backend.py  20260302_0005_mock_exam_assembly.py  (+10 more)
backend/app/: main.py
backend/docs/: quality_debt_baseline.md
backend/scripts/: backend_ci.sh  list_changed_python_files.py  list_mypy_targets.py
backend/tests/: conftest.py  test_ai_content_generation.py  test_ai_content_provider.py  test_ai_generation_worker.py  test_auth_family_link.py  test_backend_ci_changed_files.py  test_billing_operations.py  test_config_policy.py  test_content_backend.py  test_content_backfill.py  test_content_calibration.py  test_content_delivery.py  test_content_readiness.py  test_content_sync.py  test_content_type_taxonomy.py  test_error_contract.py  test_generation_policy_service.py  test_health.py  test_l_response_generation.py  test_mock_assembly.py  test_mock_exam_assembly.py  test_report_aggregation.py  test_security.py  test_subscriptions_permissions.py  test_sync_event_ingestion.py  test_timekeys.py  test_tts_audio_pipeline.py  test_type_specific_generation_quality.py  test_vocab_catalog.py
backend/tools/: content_readiness_audit.py  reviewer_ops.py  seed_dev_content.py  seed_vocab_catalog.py  vocab_catalog_audit.py
docs/: spec.md  (+13 more)
(+316 files in other folders)
